--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,9 @@
 {
   "Перевод": "English",
-  "Страница не найдена": "Not Found Page"
+  "Страница не найдена": "Not Found Page",
+  "Произошла ошибка": "Error",
+  "Обновить страницу": "Reload page",
+  "Главная": "Main",
+  "Сайт": "About",
+  "Открыть": "Toggle"
 }
