--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,9 @@
 {
   "Перевод": "Русский",
-  "Страница не найдена": "Страница не найдена"
+  "Страница не найдена": "Страница не найдена",
+  "Произошла ошибка": "Произошла ошибка",
+  "Обновить страницу": "Обновить страницу",
+  "Главная": "Главная",
+  "Сайт": "О Сайте",
+  "Открыть": "Открыть"
 }
