upgrade sidebar, added new buttonProps

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
-  "Перевод": "English",
+  "Язык": "English",
+  "Короткий язык": "En",
   "Страница не найдена": "Not Found Page",
   "Произошла ошибка": "Error",
   "Обновить страницу": "Reload page",
