--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
-  "Перевод": "Русский",
+  "Язык": "Русский",
+  "Короткий язык": "Ru",
   "Страница не найдена": "Страница не найдена",
   "Произошла ошибка": "Произошла ошибка",
   "Обновить страницу": "Обновить страницу",
